# suap-scraper

./: .gitignore  LICENSE.md  README.md  SUAP.py  boletim.json  boletim_html.txt  calculos.py  config.py  limpar_dados.py  main.py  parsear_boletim.py  pyproject.toml  requirements.txt  sanit_pandas.py
suap-scraper/: SUAP.py  utils.py
suap_scraper/: SUAP.py  __init__.py  config.py  novas_notas.py  utils.py
