[project]
name = "suap-scraper"
version = "0.0.1"
authors = [
  { name="João Cavalcante", email="cavalcante.joao@protonmail.ch" },
]
description = "Um scraper para o SUAP do IFPB"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Jao42/suap-scraper"
"Bug Tracker" = "https://github.com/Jao42/suap-scraper/issues"
