[build-system]
requires = ["setuptools>=61.0", "requests>=2.26.0", "beautifulsoup4==4.9.3"]
build-backend = "setuptools.build_meta"

[project]
name = "suap_scraper"
version = "0.0.2"
authors = [
  { name="Jao42", email="cavalcante.joao@protonmail.ch" },
]
description = "Um scraper para o SUAP do IFPB"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Jao42/suap-scraper"
"Bug Tracker" = "https://github.com/Jao42/suap-scraper/issues"
