[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "suap_scraper"
version = "0.0.6.2"
authors = [
  { name="Jao42", email="cavalcante.joao@protonmail.ch" },
]
description = "Um scraper para o SUAP do IFPB"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "httpx",
    "selectolax",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Jao42/suap-scraper"
"Bug Tracker" = "https://github.com/Jao42/suap-scraper/issues"
